# content_extraction_service

./: README.md  pyproject.toml
src/: extractor_pymudf.py  main.py
